Report and more questions.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             
             <div class="button-group">
                 <button id="next-btn" class="btn" disabled>Siguiente</button>
+                <button id="report-btn" class="btn-secondary">Reportar pregunta</button>
             </div>
         </div>
 
